possible patch for inertia scrolling issue on iPhone

--- a/vagrant/default/css/iphone.css
+++ b/vagrant/default/css/iphone.css
@@ -861,6 +861,8 @@ h1 {
 @media screen and (max-width: 600px) {
     #mobile-page-container {
         overflow-x: hidden;
+        overflow-y: scroll;
+       -webkit-overflow-scrolling:touch;
         /*position: fixed;*/
     }
     .logo {
